--- a/Builds/VisualStudio2017/Xylitol_App.vcxproj
+++ b/Builds/VisualStudio2017/Xylitol_App.vcxproj
@@ -1719,6 +1719,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\SampleSource.h"/>
+    <ClInclude Include="..\..\Source\DrumPad.h"/>
     <ClInclude Include="..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
     <ClInclude Include="..\..\..\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.h"/>
     <ClInclude Include="..\..\..\JUCE\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h"/>
