--- a/Builds/VisualStudio2017/Xylitol_App.vcxproj.filters
+++ b/Builds/VisualStudio2017/Xylitol_App.vcxproj.filters
@@ -2067,6 +2067,9 @@
     <ClInclude Include="..\..\Source\SampleSource.h">
       <Filter>Xylitol\Source</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\DrumPad.h">
+      <Filter>Xylitol\Source</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
       <Filter>Juce Modules\juce_audio_basics\audio_play_head</Filter>
     </ClInclude>
