added in ram sampler source

--- a/Builds/VisualStudio2017/Xylitol_App.vcxproj.filters
+++ b/Builds/VisualStudio2017/Xylitol_App.vcxproj.filters
@@ -2064,6 +2064,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\NonStreamingSamplerSource.h">
+      <Filter>Xylitol\Source</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\SampleSource.h">
       <Filter>Xylitol\Source</Filter>
     </ClInclude>
